# starterDD

./: .gitignore  LICENSE  MANIFEST.in  PHASE_3_ENHANCEMENT_PLAN.md  PHASE_3_QUICK_REFERENCE.md  README.md  pyproject.toml  verify_tdt_refactor.py
GeometryBuilder/: __init__.py  geometry_builder.py
MaterialMixture/: materialMixture.py  material_mixture.py
data/: GE14_model.py  generate_GE14_DRAGON_test.py  generate_GE14_TDCM_test.py  simplified_GE14_model.py
data/c2m_examples/: EDI_pin_to_mat.c2m  (+2 more)
docs/: conf.py  getting_started.rst  index.rst
starterDD/: __init__.py
tests/: conftest.py  test.out  test_AT10_4x4_mixeq.py  test_ATRIUM10_assembly_model.py  test_GE14_assembly_models.py  test_GE14_lower_core_model.py  test_assembly_model.py  test_axial_variation_core_model.py  test_control_cross.py  test_density_conversions.py  test_donjon_module_calls.py  test_dragon_calculation_scheme.py  test_dragon_runner.py  test_dragon_scheme_generation.py  test_geometry_analysis.py  test_internal_functionalities.py  test_lib_mac_mix.py  test_macro_mix.py  test_material_mix.py  test_serpent2_exports_asymmetric_gaps.py  test_tdt_file_handling.py  test_tdt_refactor_unit.py  test_temperature_api.py  test_thermal_scattering_and_suffixes.py
tutorials/: AT10_3x3_mix_duplication.py  AT10_4x4_mix_duplication.py  AT10_4x4_mix_splitting.py  AT10_4x4_no_mix_splitting.py  simple_1L_scheme.py  simple_4x4_minicore.py  simple_AT10_1L_pincell_compo.py  simple_AT10_2L_pincell_compo.py  simple_AT10_pincell_compo.py  simple_GE14_1L_scheme.py  simple_glow_GE14.py  simplified_GE14_model.py
(+98 files in other folders)
