[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "starterDD"
version = "0.1.0"
description = "Geometry handling functions for GLOW"
authors = [
    { name = "loutre", email = "your@email.com" }
]
requires-python = ">=3.11"

[tool.setuptools.packages]
find = {}