[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "starterDD"
version = "0.1.0"
description = "Dragon model building and glow interoperability package"
authors = [
    { name = "loutre", email = "your@email.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
# Install with: pip install -e ".[glow]"
glow = [
    "glow",  # requires glow package for geometry generation
]

[tool.setuptools.packages]
find = {}